--- a/BetterTargetingSystem/BetterTargetingSystem.csproj
+++ b/BetterTargetingSystem/BetterTargetingSystem.csproj
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Dalamud.NET.Sdk/12.0.2">
+<Project Sdk="Dalamud.NET.Sdk/13.0.0">
   <PropertyGroup>
     <Authors></Authors>
     <Company></Company>
@@ -7,6 +7,7 @@
     <Description>Better Targeting System</Description>
     <Copyright></Copyright>
     <PackageProjectUrl>https://github.com/Lynesth/BetterTargetingSystem</PackageProjectUrl>
+    <DalamudApiLevel>13</DalamudApiLevel>
   </PropertyGroup>
 
   <PropertyGroup>
